# PythonScripts

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  count_files.py  detect_file_encoding.py  htmlparser.py  jsonInterpreter.py  pprint_memory_size.py  pyproject.toml  requirements-dev.txt  requirements.txt
2.7/: context_exceptions.py  prometheus_playground.py  repr_vs_str.py
2.7/Celery/: NOTES.md
2.7/exceptions/: exception_vars.py
2.7/logging/: NOTES.md
2.7/pytz/: basic1.py  get_all_tz.py  relative_date1.py
3/: requirements_macbook.txt  txt_to_csv.py
3/3.7/: pprint_memory_size.py
3/class_property/: class_and_meta.py
3/coverage/: cov.xml
3/daff_example/: daff_example.html  daff_example.py
3/gold_master_testing/: test_snapshotting1.py  test_with_daff.py
3/open_weather/: .gitignore  Weather.ipynb
3/pandas/: NOTES.md
Coursera/Course 1/: firstprog.py
Coursera/Course 2/: hello_classmates.py
Python-2.7/: global_local_vars.py  inheritance_order.py  use_next.py
Python-2.7/Celery/: tasks.py
Python-2.7/collections/: defaultdict_counter.py
Python-2.7/exceptions/: exception_basic.py
Python-2.7/generators/: notes.md  (+1 more)
app/: config.py  main.py
github_lib/: v.py
jinja2/: basic_api_usage.py
misc/: pprint_memory_size.py
python-collections/: defaultdict_counter.py
python-exceptions/: handling_exceptions.py  try_except_practice.py
python-generators/: simple_generator_function.py
python-json/: jsondecoder_practice.py
python-postgresql/: sqlalchemy_move_table.py
python-yaml/: yaml_stuff.py
python3-pickle/: practice.py  testfile
(+149 files in other folders)
