[tool.poetry]
name = "pythonscripts"
version = "0.1.0"
description = ""
authors = ["Urian Chang <urianchang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
tensorflow = "^2.12.0"
keras-nlp = "0.5.0"
tensorflow-datasets = "4.9.2"
regex = "^2023.5.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
httpx = "0.24.0"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
